[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project]
name = "tda"
requires-python = ">=3.7"
authors = [
  { name="António Leitão", email="aleitao@novaims.unl.pt" },
]
description = "Topological Data Analysis in python written in Rust. Not limited to H0 and H1."
readme = "README.md"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


[tool.maturin]
features = ["pyo3/extension-module"]
